<resources>
    <string name="app_name">MyHome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="cate1">خانه و ویلا</string>
    <string name="cate2">آپارتمان و سوئیت</string>
    <string name="cate3">اداری و تجاری</string>
    <string name="cate4">زمین و باغ</string>
    <string name="phone">شماره موبایل</string>
    <string name="username">نام کاربری</string>
    <string name="password">رمز عبور</string>
    <string name="loginTitle">ورود</string>
    <string name="signUpHint">حساب کاربری ندارید؟</string>
    <string name="signUp">ثبت نام</string>
    <string name="login">ورود</string>
    <string name="logOut">خروج از حساب</string>
    <string name="editProf">ویرایش حساب کاربری</string>
    <string name="editBanner">ویرایش آگهی</string>
    <string name="myBanner">آگهی های من</string>
    <string name="myPhoto">عکس پروفایل</string>
    <string name="signIn">ورود به حساب کاربری</string>
    <string name="loginHint">قبلا ثبت نام کردید؟</string>
    <string name="signUpScreenTitle">ایجاد حساب کاربری</string>
    <string name="authHint">شماره موبایل و رمز عبور خود را وارد کنید</string>
    <string name="signOut">خروج از حساب کاربری</string>
    <string name="guest_user">کاربر مهمان</string>
    <string name="oldPassword">رمز عبور قبلی</string>
    <string name="newPassword">رمز عبور جدید</string>
    <string name="titleBanner">عنوان آگهی</string>
    <string name="description">توضیحات</string>
    <string name="price">قیمت (تومان)</string>
    <string name="location">موقعیت مکانی</string>
    <string name="category">دسته بندی</string>
    <string name="sellOrRent">فروش یا اجاره</string>
    <string name="homeSize">متراژ (متر)</string>
    <string name="roomHome">تعداد اتاق خواب</string>
    <string name="addBanner">اضافه کردن آگهی</string>
    <string name="clear">پاک کردن تمام فیلد ها</string>
    <string name="notFountResult">هیچ نتیجه ای یافت نشد!</string>
    <string name="emptyFavorite">هنوز هیچ آیتمی به لیست علاقه مندی اضافه نشده است!</string>
    <string name="emptyListUserBanner">هنوز هیچ آگهی ثبت نکرده اید!</string>
    <string name="deleteFilter">حذف فیلتر</string>
    <string name="applyFilter">اعمال فیلتر</string>

    <string-array name="array_category">
        <item>@string/cate1</item>
        <item>@string/cate2</item>
        <item>@string/cate3</item>
        <item>@string/cate4</item>
    </string-array>

</resources>