<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="8dp">

    <view.MyHomeImageView
        android:id="@+id/edit_banner_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:roundAsCircle="true"
        app:srcCompat="@drawable/ic_add_photo" />

    <EditText
        android:id="@+id/edit_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxLength="100"
        android:padding="5dp"
        app:drawableStartCompat="@drawable/ic_location" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:text="@string/category"
        android:textColor="@color/myBlue" />

    <Spinner
        android:id="@+id/edit_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="5dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/myBlue"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/sellOrRent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/homeSize" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/roomHome" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/myBlue"
        android:orientation="horizontal"
        android:weightSum="3">

        <Spinner
            android:id="@+id/edit_sell_or_rent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp" />

        <EditText
            android:id="@+id/edit_home_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:padding="5dp" />

        <EditText
            android:id="@+id/edit_number_of_room"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="2"
            android:padding="5dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/titleBanner"
        android:maxLength="100"
        android:padding="5dp" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/description"
        android:maxLength="500"
        android:padding="5dp" />

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="25dp"
        android:hint="@string/price"
        android:inputType="number"
        android:maxLength="15"
        android:padding="5dp" />


</LinearLayout>