<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/app_logo"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/loginScreenTitle"
            android:textAppearance="?textAppearanceHeadline5"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0.8"
            android:text="@string/authHint"
            android:textAppearance="?textAppearanceBody1"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/emailEt"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="@dimen/authViewWidth"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:gravity="right|center_vertical"
            android:hint="@string/phone"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/darkGray" />

        <EditText
            android:id="@+id/passwordEt"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="@dimen/authViewWidth"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="right|center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/darkGray" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="@dimen/authViewWidth"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/loginTitle"
            android:textColor="@color/blue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.4"
            android:text="@string/signUpHint"
            android:textAppearance="?textAppearanceBody1"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpLinkBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>