<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/showLayoutAdd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        android:padding="8dp">

        <com.example.myhome.view.MyHomeImageView
            android:id="@+id/add_banner_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:roundAsCircle="true"
            app:srcCompat="@drawable/ic_add_photo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/btn_add_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_location" />

            <EditText
                android:id="@+id/add_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/btn_add_location"
                android:hint="@string/location"
                android:maxLength="100"
                android:maxLines="1"
                android:padding="5dp" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:text="@string/category"
            android:textColor="@color/myBlue" />

        <Spinner
            android:id="@+id/add_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="5dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/myBlue"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/sellOrRent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/homeSize" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/roomHome" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/myBlue"
            android:orientation="horizontal"
            android:weightSum="3">

            <Spinner
                android:id="@+id/add_sell_or_rent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp" />

            <EditText
                android:id="@+id/add_home_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLines="1"
                android:padding="5dp" />

            <EditText
                android:id="@+id/add_number_of_room"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="2"
                android:padding="5dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/titleBanner"
            android:maxLength="100"
            android:maxLines="1"
            android:padding="5dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <EditText
                android:id="@+id/add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/description"
                android:maxLength="500"
                android:padding="5dp" />
        </ScrollView>

        <EditText
            android:id="@+id/add_price"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:hint="@string/price"
            android:inputType="number"
            android:maxLength="15"
            android:maxLines="1"
            android:padding="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/layout_radius_filter"
                android:text="@string/addBanner"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/layout_radius_filter"
                android:text="@string/clear"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/txtAlert"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="5dp"
        android:text="قبل از ثبت آگهی باید وارد حساب خود شوید!"
        android:visibility="gone" />

    <TextView
        android:id="@+id/authBtn"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtAlert"
        android:layout_centerInParent="true"
        android:layout_margin="5dp"
        android:layoutDirection="rtl"
        android:text="@string/signIn"
        android:textColor="@color/myBlue"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_sign_in" />

</FrameLayout>

