<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.profile.EditProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <com.example.myhome.view.MyHomeImageView
            android:id="@+id/user_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:roundAsCircle="true"
            app:srcCompat="@drawable/ic_add_photo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/username"
            android:maxLength="50"
            android:padding="5dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLength="11"
            android:padding="5dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/old_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/oldPassword"
            android:inputType="textPassword"
            android:maxLength="50"
            android:padding="5dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/newPassword"
            android:inputType="textPassword"
            android:maxLength="50"
            android:padding="5dp" />
    </LinearLayout>

    <Button
        android:id="@+id/edit_profile_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="8dp"
        android:background="@drawable/layout_radius_filter"
        android:text="@string/editProf"
        android:textColor="@color/white" />
</FrameLayout>