<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/layout_radius"
        android:padding="5dp"
        app:srcCompat="@drawable/ic_back" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        android:padding="8dp">

        <com.example.myhome.view.MyHomeImageView
            android:id="@+id/edit_banner_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:placeholderImage="@drawable/ic_add_photo"
            app:roundAsCircle="true" />

        <EditText
            android:id="@+id/edit_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLength="100"
            android:maxLines="1"
            android:padding="5dp"
            app:drawableStartCompat="@drawable/ic_location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:text="@string/category"
            android:textColor="@color/myBlue" />

        <Spinner
            android:id="@+id/edit_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="5dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/myBlue"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/sellOrRent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/homeSize" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/roomHome" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/myBlue"
            android:orientation="horizontal"
            android:weightSum="3">

            <Spinner
                android:id="@+id/edit_sell_or_rent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp" />

            <EditText
                android:id="@+id/edit_home_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLines="1"
                android:padding="5dp" />

            <EditText
                android:id="@+id/edit_number_of_room"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="2"
                android:maxLines="1"
                android:padding="5dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/titleBanner"
            android:maxLength="100"
            android:maxLines="1"
            android:padding="5dp" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="160dp">

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/description"
                android:maxLength="500"
                android:padding="5dp" />
        </ScrollView>

        <EditText
            android:id="@+id/edit_price"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:hint="@string/price"
            android:inputType="number"
            android:maxLength="15"
            android:maxLines="1"
            android:padding="5dp" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_edit_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:background="@drawable/layout_radius_filter"
        android:text="@string/editBanner"
        android:textColor="@color/white" />
</RelativeLayout>